--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-PyQt5==5.15.10
-sentence-transformers==2.3.0
-torch==2.2.0
-numpy==1.26.0
-Pillow==10.0.0
+PyQt5
+sentence-transformers
+torch
+numpy
+Pillow
